Updated Xms and Xmx